# repository-export

./: .gitignore  CODEOWNERS  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-tests.yml
rep-export/: generate_structure.py  tag_mapper.py  tiddler_exporter.py
rep-export-LINUXandMAC/: .hashes.json  cli_utils.py  generate_structure.py  tag_mapper.py  tiddler_exporter.py
rep-export-LINUXandMAC/scripts/: export_structure_wrapper.py  export_structure_wrapper_unix.py
rep-export-LINUXandMAC/tiddlers-export/: -.github_dependabot.yml.json  -.github_workflows_go-test.yml.json  -.gitignore.json  -README.md.json  -SECURITY.md.json  -cmd_exporter_main.go.json  -data_in_tiddlers.json.json  -estructura.txt.json  -internal_dedup_dedup.go.json  -internal_dedup_dedup_test.go.json  -internal_dedup_filestore.go.json  -internal_dedup_memstore.go.json  -internal_exporter_writer.go.json  -internal_exporter_writer_test.go.json  -internal_importer_reader.go.json  -internal_importer_reader_test.go.json  -internal_transform_converter.go.json  -internal_transform_converter_test.go.json  -models_record.go.json  -models_tiddler.go.json  -rep-export-LINUX_.hashes.json.json  -rep-export-LINUX_generate_structure.py.json  -rep-export-LINUX_tag_mapper.py.json  -rep-export-LINUX_tiddler_exporter.py.json  -rep-export-LINUXandMAC_generate_structure.py.json  -rep-export-LINUXandMAC_tag_mapper.py.json  -rep-export-LINUXandMAC_tiddler_exporter.py.json  -rep-export-Windows_.hashes.json.json  -rep-export-Windows_generate_structure.py.json  -rep-export-Windows_tag_mapper.py.json  -rep-export-Windows_tiddler_exporter.py.json
rep-export-Windows/: .hashes.json  cli_utils.py  generate_structure.py  tag_mapper.py  tiddler_exporter.py
rep-export-Windows/scripts/: export_structure_wrapper_windows.py
rep_export_LINUXandMAC/: cli_utils_UNIX.py  detect_root.py  ejecucion_unix.md  generate_structure_UNIX.py  large_file_scanner.py  tag_mapper_UNIX.py  tiddler_exporter_UNIX.py
rep_export_LINUXandMAC/scripts/: export_structure_wrapper_unix.py  verify_export_unix.py
rep_export_Windows/: .hashes.json  cli_utils_Windows.py  detect_root.py  ejecucion_windows.md  generate_structure_windows.py  tag_mapper_windows.py  tiddler_exporter_windows.py
rep_export_Windows/scripts_windows/: export_structure_wrapper_windows.py  verify_export_windows.py
rep_export_Windows/tiddler_tag_doc_windows/: (Estudiar)(Repository Export).json  (Estudiar)(Repository Export).jsonl
rep_export_Windows/tiddlers-export/: -.github_dependabot.yml.json  -.github_workflows_python-tests.yml.json  -.gitignore.json  -.pytest_cache_README.md.json  -LICENSE.json  -README.md.json  -estructura.txt.json  -pyproject.toml.json  -rep-export-LINUXandMAC_.hashes.json.json  -rep-export-LINUXandMAC_cli_utils.py.json  -rep-export-LINUXandMAC_generate_structure.py.json  -rep-export-LINUXandMAC_scripts_export_structure_wrapper.py.json  -rep-export-LINUXandMAC_scripts_export_structure_wrapper_unix.py.json  -rep-export-LINUXandMAC_tag_mapper.py.json  -rep-export-LINUXandMAC_tiddler_exporter.py.json  -rep-export-Windows_.hashes.json.json  -rep-export-Windows_cli_utils.py.json  -rep-export-Windows_estructura.txt.json  -rep-export-Windows_generate_structure.py.json  -rep-export-Windows_scripts_export_structure_wrapper_windows.py.json  -rep-export-Windows_tag_mapper.py.json  -rep-export-Windows_tiddler_exporter.py.json  -rep_export_LINUXandMAC_.hashes.json.json  -rep_export_LINUXandMAC___init__.py.json  -rep_export_LINUXandMAC_cli_utils_UNIX.py.json  -rep_export_LINUXandMAC_generate_structure.py.json  -rep_export_LINUXandMAC_generate_structure_UNIX.py.json  -rep_export_LINUXandMAC_scripts_export_structure_wrapper_unix.py.json  -rep_export_LINUXandMAC_tag_mapper.py.json  -rep_export_LINUXandMAC_tag_mapper_UNIX.py.json  -rep_export_LINUXandMAC_tiddler_exporter.py.json  -rep_export_LINUXandMAC_tiddler_exporter_UNIX.py.json  -rep_export_Windows_.hashes.json.json  -rep_export_Windows___init__.py.json  -rep_export_Windows_cli_utils_Windows.py.json  -rep_export_Windows_generate_structure_windows.py.json  -rep_export_Windows_scripts_windows_export_structure_wrapper_windows.py.json  -rep_export_Windows_tag_mapper_windows.py.json  -rep_export_Windows_tiddler_exporter_windows.py.json  -rep_export_Windows_tiddler_tag_doc_windows_(Estudiar)(Repository Export).json.json  (+6 more)
scripts/: copy_repo.ps1  copy_repo.sh
test-rep-export-Windows/: test_generate_structure.py  test_generate_structure_Windows.py
tests/test-rep-export-LINUXandMAC/: test_detect_root_UNIX.py  test_generate_structure_LINUX&MAC.py  test_integration_nested_UNIX.py  test_large_file_scanner_unix.py  test_tiddler_exporter_UNIX.py
tests/test-rep-export-Windows/: test_detect_root.py  test_generate_structure_Windows.py  test_integration_nested.py  test_large_file_scanner_windows.py  test_tiddler_exporter.py
