[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repository-export"
version = "0.3.0"  # bump por integración de .gitignore
description = "Automatiza la creación de documentación semántica desde repositorios de código, generando tiddlers para TiddlyWiki."
readme = "README.md"
requires-python = ">=3.7"
authors = [
  { name = "Diego Beltrán", email = "tu.email@example.com" }
]
dependencies = []

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Documentation",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]

[project.urls]
"Home" = "https://github.com/diegoabeltran16/repository-export"
"Repository" = "https://github.com/diegoabeltran16/repository-export"
"License" = "https://github.com/diegoabeltran16/repository-export/blob/main/LICENSE"

[project.optional-dependencies]
dev        = ["pytest"]
cli        = ["rich"]
gitignore  = ["pathspec>=0.10.1"]  # para soportar carga de .gitignore

[tool.setuptools.packages.find]
where = ["."]
